feat: modifica lo necesario para despliegue en Railway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
+spring.jpa.properties.hibernate.dialec=org.hibernate.dialect.PostgreSQLDialec
 # Se configura la BD, lectura de ENV, e info importante
 spring.jpa.hibernate.ddl-auto=update
 spring.application.name=apirest
-server.port=8080
+# server.port=8080 # railway asignara el puerto
 
 # aqui se importa lo del ENV, es opcional para que si no hay ENV no se muera
 spring.config.import=optional:file:.env[.properties]
+
+# tomar variables de entorno de railway
+spring.profile.active=${MYENV}
 
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
